---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub fn main() {\n  let version = 1 |> version()\n  version\n}\n\npub fn version(n) {\n  Ok(1)\n}"
---
----- SOURCE CODE

pub fn main() {
  let version = 1 |> version()
  version
}

pub fn version(n) {
  Ok(1)
}

----- COMPILED JAVASCRIPT
import { Ok } from "../rakun.mjs";

export function version(n) {
  return new Ok(1);
}

export function main() {
  let version$1 = (() => {
    let _pipe = 1;
    return version(_pipe);
  })();
  return version$1;
}
